# qbittorrent-api

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  README.rst  change_log.txt  install.bat  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  package-and-install.yml  pre-commit-update.yml  publish.yml  python-app.yml  python-publish.yml  pythonpublish.yml  qbt-dev-tests.yml  release.yml  test.yml  tests-qbt-dev.yml  tests-release.yml
docs/source/: api.rst  async.rst  behavior&configuration.rst  conf.py  exceptions.rst  index.rst  introduction.rst  performance.rst  spelling_wordlist
docs/source/apidoc/: app.rst  attrdict.rst  auth.rst  client.rst  definitions.rst  log.rst  request.rst  rss.rst  search.rst  sync.rst  torrent_states.rst  torrentcreator.rst  torrents.rst  transfer.rst  version.rst
qbittorrentapi/: __init__.py  _attrdict.py  _attrdict.pyi  _version_support.py  _version_support.pyi  app.py  app.pyi  auth.py  auth.pyi  client.py  client.pyi  decorators.py  decorators.pyi  definitions.py  definitions.pyi  exceptions.py  exceptions.pyi  helpers.py  interactions.py  log.py  log.pyi  objects.py  request.py  request.pyi  responses.py  rss.py  rss.pyi  search.py  search.pyi  sync.py  sync.pyi  torrents.py  torrents.pyi  transfer.py  transfer.pyi
src/qbittorrentapi/: __init__.py  _attrdict.py  _types.pyi  _version_support.py  _version_support.pyi  app.py  app.pyi  auth.py  auth.pyi  client.py  client.pyi  decorators.py  definitions.py  definitions.pyi  exceptions.py  log.py  log.pyi  request.py  request.pyi  rss.py  rss.pyi  search.py  search.pyi  sync.py  sync.pyi  torrentcreator.py  torrents.py  torrents.pyi  transfer.py
tests/: conftest.py  create_deb.sh  kubuntu-20.04.2.0-desktop-amd64.iso.torrent  kubuntu-21.04-desktop-amd64.iso.torrent  test_app.py  test_auth.py  test_decorators.py  test_definitions.py  test_log.py  test_request.py  test_rss.py  test_search.py  test_sync.py  test_torrent.py  test_torrent_states.py  test_torrentcreator.py  test_torrents.py  test_transfer.py  test_version.py  test_zzz_last_tests.py  utils.py  version_map.py
tests/_resources/: kubuntu-22.04.3-desktop-amd64.iso.torrent  kubuntu-22.04.4-desktop-amd64.iso.torrent  ubuntu-22.04.1-desktop-amd64.iso.torrent  xubuntu-22.04.4-desktop-amd64.iso.torrent
tests/resources/: kubuntu-22.04-desktop-amd64.iso.torrent  kubuntu-22.04.1-desktop-amd64.iso.torrent
