[metadata]
name = qbittorrent-api
version = 2022.8.38
author = Russell Martin
author_email = rmartin16@gmail.com
maintainer = Russell Martin
maintainer_email = rmartin16@gmail.com
url = https://github.com/rmartin16/qbittorrent-api
project_urls =
    Documentation = https://qbittorrent-api.readthedocs.io/
    API Reference = https://qbittorrent-api.readthedocs.io/en/latest/api.html
    Source = https://github.com/rmartin16/qbittorrent-api
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Communications :: File Sharing
    Topic :: Utilities
license = MIT
license_files = LICENSE
description = Python client for qBittorrent v4.1+ Web API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    python
    qbittorrent
    api
    client
    torrent
    torrents
    webui
    web
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    enum34; python_version < "3"
    requests >= 2.16.0
    six
    urllib3 >= 1.24.2
    # required for pkg_resources.parse_version
    setuptools

[options.extras_require]
test =
    build
    codecov
    coveralls
    mock; python_version < "3"
    pytest
    pytest-cov
dev =
    black
    build
    flake8
    furo
    pre-commit
    sphinx
    sphinx-copybutton

[bdist_wheel]
universal = 1

[flake8]
exclude=\
    venv*/*,\
    local/*,\
    docs/*,\
    build/*,\
    .eggs/*,\
    .tox/*
max-line-length = 127
ignore =
    # line break before binary operator
    W503
per-file-ignores =
    # Found commented out code
    qbittorrentapi/_attrdict.py: E800
