[metadata]
name = qbittorrent-api
version = 2023.7.52
author = Russell Martin
maintainer = Russell Martin
url = https://github.com/rmartin16/qbittorrent-api
project_urls =
    Documentation = https://qbittorrent-api.readthedocs.io/
    API Reference = https://qbittorrent-api.readthedocs.io/en/latest/api.html
    Source = https://github.com/rmartin16/qbittorrent-api
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Communications :: File Sharing
    Topic :: Utilities
license = MIT
license_files = LICENSE
description = Python client for qBittorrent v4.1+ Web API.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    python
    qbittorrent
    api
    client
    torrent
    torrents
    webui
    web
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = src
install_requires =
    backports.functools-lru-cache; python_version < "3.3"
    enum34; python_version < "3"
    requests >= 2.16.0
    six
    urllib3 >= 1.24.2
    packaging

[options.package_data]
qbittorrentapi =
    py.typed
    *.pyi

[options.extras_require]
dev =
    black == 23.7.0; python_version >= "3.8"
    build == 1.0.0; python_version >= "3.8"
    coverage[toml]; python_version < "3.8"
    coverage[toml] == 7.3.0; python_version >= "3.8"
    furo == 2023.8.19; python_version >= "3.8"
    mock; python_version < "3"
    mypy == 1.5.1; python_version >= "3.8" and platform_python_implementation != "PyPy"
    pre-commit; python_version < "3.8"
    pre-commit == 3.3.3; python_version >= "3.8"
    pytest; python_version < "3.8"
    pytest == 7.4.0; python_version >= "3.8"
    sphinx == 7.2.5; python_version >= "3.9"
    sphinx-copybutton == 0.5.2; python_version >= "3.8"
    sphinxcontrib-spelling == 8.0.0; python_version >= "3.8"
    tox == 4.11.1; python_version >= "3.8"
    twine == 4.0.2; python_version >= "3.8"
    types-requests == 2.31.0.2; python_version > "3"
    types-six == 1.16.21.9; python_version > "3"

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
