[metadata]
name = qbittorrent-api
version = 2023.9.53
author = Russell Martin
maintainer = Russell Martin
url = https://github.com/rmartin16/qbittorrent-api
project_urls =
    Documentation = https://qbittorrent-api.readthedocs.io/
    API Reference = https://qbittorrent-api.readthedocs.io/en/latest/api.html
    Source = https://github.com/rmartin16/qbittorrent-api
classifiers =
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Communications :: File Sharing
    Topic :: Utilities
license = MIT
license_files = LICENSE
description = Python client for qBittorrent v4.1+ Web API.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    python
    qbittorrent
    api
    client
    torrent
    torrents
    webui
    web
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = src
install_requires =
    requests >= 2.16.0
    urllib3 >= 1.24.2
    packaging

[options.package_data]
qbittorrentapi =
    py.typed
    *.pyi

[options.extras_require]
dev =
    black == 23.9.1
    build == 1.0.3
    coverage[toml] == 7.3.1
    furo == 2023.9.10
    mypy == 1.5.1; platform_python_implementation != "PyPy"
    pre-commit == 3.4.0
    pytest == 7.4.2
    sphinx == 7.2.6; python_version >= "3.9"
    sphinx-copybutton == 0.5.2
    sphinxcontrib-spelling == 8.0.0
    sphinx-autodoc-typehints == 1.24.0
    tox == 4.11.3
    twine == 4.0.2
    types-requests == 2.31.0.5
    types-six == 1.16.21.9

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
